spacing issue fix

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -289,6 +289,7 @@ h4{
 #reviewForm {
     display: flex;
     align-items: center;
+    padding: 2rem;
 }
 
 .addLocationHeading {
